--- a/app/src/main/res/layout/daily_meal_fragment.xml
+++ b/app/src/main/res/layout/daily_meal_fragment.xml
@@ -1,11 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layoutDaily"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgrounddd"
-    tools:context=".ui.gallery.DailyMealFragment">
+    tools:context=".activities.DailyMealFragment">
+
+
+
+
+
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer"
+        android:background="#BFEDE2"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black">
+
+    <Button
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:layout_gravity="bottom"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        />
+    </com.google.android.material.navigation.NavigationView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#073C8A"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:popupTheme="@style/Theme.FoodDietApplication.PopupOverlay" />
 
     <TextView
         android:id="@+id/exerciseTitle"
@@ -16,10 +60,10 @@
         android:textSize="35sp"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="10dp"/>
 
     <pl.droidsonroids.gif.GifImageButton
         android:id="@+id/running"
@@ -51,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@id/pushUp"
         android:layout_marginTop="20dp"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
