--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,17 +14,16 @@
 
         <EditText
             android:id="@+id/editText4"
-            android:layout_width="297dp"
+            android:layout_width="320dp"
             android:layout_height="63dp"
-            android:layout_margin="6dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/search_bg"
             android:drawableRight="@drawable/baseline_search_24"
             android:drawablePadding="9dp"
             android:fontFamily="@font/alfa_slab_one"
             android:hint="Search"
-            android:padding="10dp"
+            android:padding="15dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="13sp"
@@ -80,11 +79,18 @@
             android:id="@+id/home_ver_rec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
+            android:layout_margin="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_hor_rec" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TEST ONLY"
+            app:layout_constraintTop_toBottomOf="@+id/home_ver_rec"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
